--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"ejs-mate": "^4.0.0",
 		"express": "^4.19.2",
 		"express-session": "^1.18.0",
+		"method-override": "^3.0.0",
 		"multer": "^1.4.5-lts.1",
 		"nodemon": "^3.1.0"
 	}
