--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"express-session": "^1.18.0",
 		"method-override": "^3.0.0",
 		"multer": "^1.4.5-lts.1",
+		"node-notifier": "^10.0.1",
 		"nodemon": "^3.1.0"
 	}
 }
