--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
 	"start-dev": "nodemon index.js",
 	"start": "node index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"build":"npm i"
+
 	},
 	"author": "",
 	"license": "ISC",
